# EcoClaw-Bench

./: .gitignore  README.md
experiments/methods/LycheeMem/: .env.example  .gitignore  README_zh.md  main.py  pyproject.toml
experiments/methods/LycheeMem/examples/: api_pipeline_demo.py
experiments/methods/LycheeMem/openclaw-plugin/: INSTALL_OPENCLAW_zh.md  index.ts
experiments/methods/LycheeMem/src/agents/: base_agent.py  consolidator_agent.py  reasoning_agent.py  search_coordinator.py  synthesizer_agent.py  wm_manager.py
experiments/methods/LycheeMem/src/api/: dependencies.py  models.py  server.py  trace_builders.py
experiments/methods/LycheeMem/src/api/routers/: auth.py  chat.py  memory.py  pipeline.py  session.py
experiments/methods/LycheeMem/src/auth/: __init__.py  auth.py
experiments/methods/LycheeMem/src/core/: factory.py  graph.py  state.py
experiments/methods/LycheeMem/src/embedder/: base.py  litellm_embedder.py
experiments/methods/LycheeMem/src/llm/: __init__.py  base.py  litellm_llm.py
experiments/methods/LycheeMem/src/mcp/: __init__.py  handler.py  server.py  tools_schema.py
experiments/methods/LycheeMem/src/memory/procedural/: __init__.py  sqlite_skill_store.py
experiments/methods/LycheeMem/src/memory/semantic/: __init__.py  base.py  encoder.py  engine.py  models.py  planner.py  prompts.py  sqlite_store.py  synthesizer.py  vector_index.py
experiments/methods/LycheeMem/src/memory/working/: __init__.py  (+3 more)
experiments/methods/LycheeMem/web-demo/: index.html
experiments/methods/LycheeMem/web-demo/src/: App.tsx  api.ts  types.ts  utils.ts
(+275 files in other folders)
